--- a/styles/style.css
+++ b/styles/style.css
@@ -42,11 +42,15 @@ header{
     margin-left:5px;
 }
 .right-container {
-    
+    display:flex;
+    cursor:pointer;
+    box-sizing: border-box;
+    height:50px;
+    align
 }
 .menu {
     background:white;
-    cursor:pointer;
+    
     position:relative;
     width:40px;
     height:1px;
